# glowcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  glowcontrol.apparmor  glowcontrol.desktop.in  manifest.json.in
app/: CMakeLists.txt  main.cpp  ui.qrc
app/qml/: BulbControl.qml  BulbMore.qml  Bulbs.qml  Demo.qml  GlowControl.qml  Settings.qml  Thirdparty.qml
app/tests/autopilot/: run
app/tests/autopilot/GlowControl/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/Glowcontrol/: backend.cpp  backend.h  bulbdiscoverer.cpp  bulbdiscoverer.h  bulbmodel.cpp  bulbmodel.h  bulbs.cpp  bulbs.h  bulbtracker.cpp  bulbtracker.h  bulbworker.cpp  bulbworker.h  glowcontrol.cpp  glowcontrol.h  lifxhelper.h  lifxobject.cpp  lifxobject.h  lightbulb.cpp  lightbulb.h  lightbulbs.cpp  lightbulbs.h  qmldir
backend/tests/unit/: tst_mytype.qml
lib/: CMakeLists.txt
po/: CMakeLists.txt  com.ubuntu.developer.jonas-drange.pot  glowcontrol.jonas-drange.pot  glowcontrol.pot
scripts/: retversion
